--- a/src/componentes/NavBar/NavBar.css
+++ b/src/componentes/NavBar/NavBar.css
@@ -2,3 +2,11 @@
     font-style: italic;
     
 }
+
+.estilosnarvar{
+text-decoration: none;
+color: gray;
+position: relative;
+top: 7px;
+margin-left: 5px;
+}
